--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ua.goit.dev6</groupId>
-    <artifactId>hw_6</artifactId>
+    <artifactId>hw4</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
